--- a/playground/run/modules_config.yaml
+++ b/playground/run/modules_config.yaml
@@ -1,6 +1,6 @@
 ---
  local-models-path: "src_py.air_supervision.modules.model_controller"
- aimm-models-path: "air_supervision.aimm.anomaly_models."
+ aimm-models-path:
 
  supported-models:
    - SVM
